sorting classes out and added git

--- a/warmup/warmup.csproj
+++ b/warmup/warmup.csproj
@@ -38,8 +38,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Git.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Svn.cs" />
+    <Compile Include="TargetDir.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
