--- a/warmup/App.config
+++ b/warmup/App.config
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-
-    <add key="svn" value="http://srvutilscm/svn/FHLBank-Templates/"/>
+    <add key="source_control" value="http://srvutilscm/svn/FHLBank-Templates/"/>
   </appSettings>
 </configuration>
