updating the repository path

--- a/settings/UppercuT.config
+++ b/settings/UppercuT.config
@@ -6,7 +6,7 @@
   <!-- Required Items -->
   <property name="project.name" value="warmup" overwrite="false" />
   <property name="path_to_solution" value="." overwrite="false" />
-  <property name="repository.path" value="nowhere" overwrite="false" />
+  <property name="repository.path" value="git://github.com/drusellers/warmup.git" overwrite="false" />
   <property name="company.name" value="A Curious Mind Software" overwrite="false" />
 
   <!-- folders -->
