--- a/settings/UppercuT.config
+++ b/settings/UppercuT.config
@@ -14,6 +14,7 @@
   <property name="folder.reports" value="${project.name}.Reports" overwrite="false" />
   <property name="folder.deployment" value="deployment" overwrite="false" />
   <property name="folder.documentation" value="docs" overwrite="false" />
+  <property name="folder.references" value="lib" overwrite="false" />
   <property name="folder.build_scripts" value="build" overwrite="false" />
   <property name="folder.build_scripts_custom" value="build.custom" overwrite="false" />
   <property name="folder.code_build" value="build_output" overwrite="false" />
@@ -23,7 +24,7 @@
   <property name="folder.file_server" value="file.server" overwrite="false" />
 
   <!-- FRAMEWORKS -->
-  <!-- microsoft.framework: vb6, net-1.1,net-2.0,net-3.5  -->
+  <!-- microsoft.framework: vb6, net-1.1, net-2.0, net-3.5, net-4.0-beta2  -->
   <property name="microsoft.framework" value="net-3.5" overwrite="false" />
   <!-- language.short: vb,cs -->
   <property name="language.short" value="cs" overwrite="false" />
@@ -35,7 +36,7 @@
   <!-- ASSEMBLY VARIABLES -->
   <property name="version.major" value="0" overwrite="false" />
   <property name="version.minor" value="0" overwrite="false" />
-  <property name="assembly.description" value="${project.name} is a product of ${company.name}." overwrite="false" />
+  <property name="assembly.description" value="${project.name} is a product of ${company.name} - ${repository.path}." overwrite="false" />
   <!-- partially trusted callers doesn't set correctly with assembly generator - Leave false for now-->
   <property name="allow.partially_trusted_callers" value="false" overwrite="false" />
   <property name="sign.project_with_key" value="false" overwrite="false" />
@@ -47,13 +48,13 @@
   <!-- These are run two folders down from the top level folder, so figure out the relative path from there and add "..\..\" -->
   <!-- In example, if from the top level directory, you have an item that is in lib\NCover\NCover.Console.exe you should add it here as ..\..\lib\NCover\NCover.Console.exe  -->
   <!-- To not use the tool, change to a location that doesn't exist -->
-  <property name="app.ncover" value="..\..\lib\NCover\NCover.Console.exe.NO" overwrite="false" />
-  <property name="app.ncover_explorer" value="..\..\lib\NCover\NCoverExplorer.Console.exe.NO" overwrite="false" />
-  <property name="app.ncover.tester" value="..\..\lib\MbUnit2\MbUnit.Cons.exe.NO" overwrite="false" if="${test.framework=='mbunit2'}" />
-  <property name="app.ncover.tester" value="..\..\lib\NUnit\nunit-console.exe.NO" overwrite="false" if="${test.framework=='nunit'}" />
+  <property name="app.ncover" value="..\..\${folder.references}\NCover\NCover.Console.exe.NO" overwrite="false" />
+  <property name="app.ncover_explorer" value="..\..\${folder.references}\NCover\NCoverExplorer.Console.exe.NO" overwrite="false" />
+  <property name="app.ncover.tester" value="..\..\${folder.references}\MbUnit2\MbUnit.Cons.exe.NO" overwrite="false" if="${test.framework=='mbunit2'}" />
+  <property name="app.ncover.tester" value="..\..\${folder.references}\NUnit\nunit-console.exe.NO" overwrite="false" if="${test.framework=='nunit'}" />
   <property name="app.ncover.tester" value="C:\Program Files (x86)\Gallio\bin\Gallio.Host.exe.NO" overwrite="false" if="${test.framework=='gallio'}" />
   <property name="app.ndepend" value="C:\Program Files\NDepend\NDepend.Console.exe.NO" overwrite="false" />
-  <property name="app.moma" value="..\..\lib\MoMA\MoMA.exe.NO" overwrite="false" />
+  <property name="app.moma" value="..\..\${folder.references}\MoMA\MoMA.exe.NO" overwrite="false" />
 
   <!-- COMPILE VARIABLES -->
   <property name="msbuild.configuration" value="Release" overwrite="false" />
