Creating custom configuration. Git can be selected now. Git must delete the .git directory after the clone.

--- a/warmup/App.config
+++ b/warmup/App.config
@@ -1,6 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-  <appSettings>
-    <add key="source_control" value="http://srvutilscm/svn/FHLBank-ItUtilities/Mainline/warmups/"/>
-  </appSettings>
+  <configSections>
+    <section name="warmup" type="warmup.settings.WarmupConfiguration, warmup"/>
+  </configSections>
+
+  <warmup
+    sourceControlWarmupLocation="http://github.com/ferventcoder/warmup-templates.git/"
+    sourceControlType="git"
+    />
+  
 </configuration>
