--- a/warmup/warmup.csproj
+++ b/warmup/warmup.csproj
@@ -44,6 +44,8 @@
     <Compile Include="Git.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="settings\WarmupConfiguration.cs" />
+    <Compile Include="SourceControlType.cs" />
     <Compile Include="Svn.cs" />
     <Compile Include="TargetDir.cs" />
   </ItemGroup>
