Don't process anything in the .git directory.

--- a/warmup/App.config
+++ b/warmup/App.config
@@ -5,7 +5,7 @@
   </configSections>
 
   <warmup
-    sourceControlWarmupLocation="git://github.com/ferventcoder/warmup-templates.git/"
+    sourceControlWarmupLocation="git://github.com/ferventcoder/warmup-templates.git"
     sourceControlType="git"
     />
   
