Ignored extension moved to config file, filesystem tamplate now facilitated (for TFS usage for RhysC at work) and all exporter moved to a simple strategy pattern

--- a/warmup/App.config
+++ b/warmup/App.config
@@ -4,9 +4,23 @@
     <section name="warmup" type="warmup.settings.WarmupConfiguration, warmup"/>
   </configSections>
 
-  <warmup
-    sourceControlWarmupLocation="git://github.com/ferventcoder/warmup-templates.git"
-    sourceControlType="git"
-    />
-  
+  <warmup sourceControlWarmupLocation="C:\CODE\Scratch\WarmUpTemplates\"
+          sourceControlType="FileSystem">
+    <ignoredExtensions>
+      <clear/>
+      <add ext="exe"/>
+      <add ext="dll"/>
+      <add ext="pdb"/>
+      <add ext="jpg"/>
+      <add ext="png"/>
+      <add ext="gif"/>
+      <add ext="mst"/>
+      <add ext="msi"/>
+      <add ext="msm"/>
+      <add ext="gitignore"/>
+      <add ext="idx"/>
+      <add ext="pack"/>
+    </ignoredExtensions>
+  </warmup>
+
 </configuration>
