--- a/warmup/warmup.csproj
+++ b/warmup/warmup.csproj
@@ -41,9 +41,12 @@
     <Compile Include="..\SolutionVersion.cs">
       <Link>SolutionVersion.cs</Link>
     </Compile>
+    <Compile Include="Folder.cs" />
     <Compile Include="Git.cs" />
+    <Compile Include="IExporter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="settings\IgnoredFileTypeCollection.cs" />
     <Compile Include="settings\WarmupConfiguration.cs" />
     <Compile Include="SourceControlType.cs" />
     <Compile Include="Svn.cs" />
