more legal and config file notes

--- a/warmup/App.config
+++ b/warmup/App.config
@@ -4,8 +4,12 @@
     <section name="warmup" type="warmup.settings.WarmupConfiguration, warmup"/>
   </configSections>
 
-  <warmup sourceControlWarmupLocation="C:\CODE\Scratch\WarmUpTemplates\"
-          sourceControlType="FileSystem">
+  <!-- 
+    replacementToken="__NAME__"
+    sourceControlType="svn|git|file"
+    -->
+  <warmup sourceControlType="file"  
+          sourceControlWarmupLocation="C:\CODE\Scratch\WarmUpTemplates\">
     <ignoredExtensions>
       <clear/>
       <add ext="exe"/>
