added move to destination & GitTemplateExtractor- moving the template one directory up and clearing other files/dirs.

--- a/warmup/warmup.csproj
+++ b/warmup/warmup.csproj
@@ -50,6 +50,7 @@
     </Compile>
     <Compile Include="Folder.cs" />
     <Compile Include="Git.cs" />
+    <Compile Include="GitTemplateExtractor.cs" />
     <Compile Include="IExporter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
