upgrading the build to uc rev313

--- a/settings/UppercuT.config
+++ b/settings/UppercuT.config
@@ -6,7 +6,7 @@
   <!-- Required Items -->
   <property name="project.name" value="warmup" overwrite="false" />
   <property name="path_to_solution" value="." overwrite="false" />
-  <property name="repository.path" value="git://github.com/drusellers/warmup.git" overwrite="false" />
+  <property name="repository.path" value="git://github.com/chucknorris/warmup.git" overwrite="false" />
   <property name="company.name" value="A Curious Mind Software" overwrite="false" />
 
   <!-- folders -->
@@ -24,37 +24,26 @@
   <property name="folder.file_server" value="file.server" overwrite="false" />
 
   <!-- FRAMEWORKS -->
-  <!-- microsoft.framework: vb6, net-1.1, net-2.0, net-3.5, net-4.0-beta2  -->
+  <!-- microsoft.framework: vb6, net-1.1, net-2.0, net-3.5, net-4.0  -->
   <property name="microsoft.framework" value="net-3.5" overwrite="false" />
   <!-- language.short: vb,cs -->
   <property name="language.short" value="cs" overwrite="false" />
-  <!-- test.framework: mbunit2, nunit, gallio - with gallio it must be installed in program files on every computer. Alternatively you can add 26MB to your repo and put it there. Little much for my tastes. -->
+  <!-- test.framework: none, mbunit2, nunit, gallio - with gallio it must be installed in program files on every computer. Alternatively you can add 26MB to your repo and put it there. Little much for my tastes. -->
   <property name="test.framework" value="none" overwrite="false" />
-  <!-- source_control_type: svn, vss, tfs, vault, git -->
+  <!-- source_control_type: svn, vss, tfs, vault, git, hg -->
   <property name="source_control_type" value="git" overwrite="false" />
 
   <!-- ASSEMBLY VARIABLES -->
   <property name="version.major" value="0" overwrite="false" />
   <property name="version.minor" value="0" overwrite="false" />
   <property name="assembly.description" value="${project.name} is a product of ${company.name} - ${repository.path}." overwrite="false" />
+  <property name="assembly.clscompliant" value="true" overwrite="false" />
   <!-- partially trusted callers doesn't set correctly with assembly generator - Leave false for now-->
   <property name="allow.partially_trusted_callers" value="false" overwrite="false" />
   <property name="sign.project_with_key" value="false" overwrite="false" />
   <!-- To use relative pathing your projects all need to be at the same level. -->
   <property name="sign.key.use_relative_pathing" value="false" overwrite="false" />
   <property name="sign.key.relative_path_from_projects" value="..\..\" overwrite="false" />
-
-  <!-- EXTERNAL TOOLS -->
-  <!-- These are run two folders down from the top level folder, so figure out the relative path from there and add "..\..\" -->
-  <!-- In example, if from the top level directory, you have an item that is in lib\NCover\NCover.Console.exe you should add it here as ..\..\lib\NCover\NCover.Console.exe  -->
-  <!-- To not use the tool, change to a location that doesn't exist -->
-  <property name="app.ncover" value="..\..\${folder.references}\NCover\NCover.Console.exe.NO" overwrite="false" />
-  <property name="app.ncover_explorer" value="..\..\${folder.references}\NCover\NCoverExplorer.Console.exe.NO" overwrite="false" />
-  <property name="app.ncover.tester" value="..\..\${folder.references}\MbUnit2\MbUnit.Cons.exe.NO" overwrite="false" if="${test.framework=='mbunit2'}" />
-  <property name="app.ncover.tester" value="..\..\${folder.references}\NUnit\nunit-console.exe.NO" overwrite="false" if="${test.framework=='nunit'}" />
-  <property name="app.ncover.tester" value="C:\Program Files (x86)\Gallio\bin\Gallio.Host.exe.NO" overwrite="false" if="${test.framework=='gallio'}" />
-  <property name="app.ndepend" value="C:\Program Files\NDepend\NDepend.Console.exe.NO" overwrite="false" />
-  <property name="app.moma" value="..\..\${folder.references}\MoMA\MoMA.exe.NO" overwrite="false" />
 
   <!-- COMPILE VARIABLES -->
   <property name="msbuild.configuration" value="Release" overwrite="false" />
@@ -63,5 +52,19 @@
   <!-- POLICIES -->
   <property name="file.installation_document" value="..\${folder.documentation}\Installation\${project.name}Installation.doc" overwrite="false" />
   <property name="fail.if_no_installation_document" value="false" overwrite="false" />
+  
+  <!-- EXTERNAL TOOLS -->
+  <!-- These are run two folders down from the top level folder, so figure out the relative path from there and add "..\..\" -->
+  <!-- In example, if from the top level directory, you have an item that is in lib\NCover\NCover.Console.exe you should add it here as ..\..\lib\NCover\NCover.Console.exe  -->
+  <!-- To not use the tool, change to a location that doesn't exist -->
+  <property name="app.nunit.console" value="..\..\${folder.references}\NUnit\nunit-console.exe" overwrite="false" />
+  <property name="app.ncover" value="..\..\${folder.references}\NCover\NCover.Console.exe.NO" overwrite="false" />
+  <property name="app.ncover_explorer" value="..\..\${folder.references}\NCover\NCoverExplorer.Console.exe.NO" overwrite="false" />
+  <property name="app.ncover.tester" value="..\..\${folder.references}\MbUnit2\MbUnit.Cons.exe" overwrite="false" if="${test.framework=='mbunit2'}" />
+  <property name="app.ncover.tester" value="${app.nunit.console}" overwrite="false" if="${test.framework=='nunit'}" />
+  <property name="app.ncover.tester" value="C:\Program Files (x86)\Gallio\bin\Gallio.Host.exe" overwrite="false" if="${test.framework=='gallio'}" />
+  <property name="app.ndepend" value="C:\Program Files\NDepend\NDepend.Console.exe.NO" overwrite="false" />
+  <property name="app.moma" value="..\..\${folder.references}\MoMA\MoMA.exe.NO" overwrite="false" />
+  <property name="allow.powershell.unrestricted" value="false" overwrite="false" />
 
 </project>
