adding an ignored extension

--- a/warmup/App.config
+++ b/warmup/App.config
@@ -24,6 +24,7 @@
       <add ext="gitignore"/>
       <add ext="idx"/>
       <add ext="pack"/>
+      <add ext="suo"/>
     </ignoredExtensions>
   </warmup>
 
