adding more extensions to ignore. Starting to think this would have been better as a whitelist

--- a/warmup/App.config
+++ b/warmup/App.config
@@ -9,7 +9,7 @@
     sourceControlType="svn|git|file"
     -->
   <warmup sourceControlType="file"  
-          sourceControlWarmupLocation="C:\CODE\Scratch\WarmUpTemplates\">
+          sourceControlWarmupLocation="C:\CODE\WarmUpTemplates">
     <ignoredExtensions>
       <clear/>
       <add ext="exe"/>
@@ -25,6 +25,10 @@
       <add ext="idx"/>
       <add ext="pack"/>
       <add ext="suo"/>
+      <add ext="ico"/>
+      <add ext="nupkg"/>
+      <add ext="zip"/>
+      <add ext="7z"/>
     </ignoredExtensions>
   </warmup>
 
