updating warmup loc

--- a/warmup/App.config
+++ b/warmup/App.config
@@ -9,7 +9,7 @@
     sourceControlType="svn|git|file"
     -->
   <warmup sourceControlType="file"  
-          sourceControlWarmupLocation="C:\CODE\WarmUpTemplates">
+          sourceControlWarmupLocation="C:\CODE\WarmUp-Templates">
     <ignoredExtensions>
       <clear/>
       <add ext="exe"/>
