Do not error if arguments are incorrect. Instead show help and configuration

--- a/warmup/App.config
+++ b/warmup/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0"?>
 <configuration>
   <configSections>
     <section name="warmup" type="warmup.settings.WarmupConfiguration, warmup"/>
@@ -8,8 +8,7 @@
     replacementToken="__NAME__"
     sourceControlType="svn|git|file"
     -->
-  <warmup sourceControlType="file"  
-          sourceControlWarmupLocation="C:\CODE\WarmUp-Templates">
+  <warmup sourceControlType="file" sourceControlWarmupLocation="C:\CODE\_templates">
     <ignoredExtensions>
       <clear/>
       <add ext="exe"/>
@@ -32,4 +31,4 @@
     </ignoredExtensions>
   </warmup>
 
-</configuration>
+<startup><supportedRuntime version="v2.0.50727"/></startup></configuration>
