Custom replacing tokens, file extensions ignore case, skipping readonly and hidden files

--- a/warmup/App.config
+++ b/warmup/App.config
@@ -29,6 +29,10 @@
       <add ext="zip"/>
       <add ext="7z"/>
     </ignoredExtensions>
+
+    <textReplaces>
+      <add find="__COMPANY_NAME__" replace="XXX inc." />
+    </textReplaces>
   </warmup>
 
 <startup><supportedRuntime version="v2.0.50727"/></startup></configuration>
