--- a/warmup/warmup.csproj
+++ b/warmup/warmup.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="settings\IgnoredFileTypeCollection.cs" />
+    <Compile Include="settings\TextReplaceCollection.cs" />
     <Compile Include="settings\WarmupConfiguration.cs" />
     <Compile Include="SourceControlType.cs" />
     <Compile Include="Svn.cs" />
