upgrading uc to 1.4.2

--- a/settings/UppercuT.config
+++ b/settings/UppercuT.config
@@ -22,6 +22,7 @@
   <property name="folder.app.drop" value="${project.name}" overwrite="false" />
   <property name="folder.environment_files" value="environment.files" overwrite="false" />
   <property name="folder.file_server" value="file.server" overwrite="false" />
+  <property name="folder.program_files" value="${environment::get-folder-path('ProgramFiles')}" />
 
   <!-- FRAMEWORKS -->
   <!-- microsoft.framework: vb6, net-1.0, net-1.1, net-2.0, net-3.5, net-4.0, netcf-1.0, netcf-2.0, silverlight-2.0, mono-1.0, mono-2.0, mono-3.5, moonlight-2.0 (Enter multiple ones with a "," to take advantage of multitargeting) -->
@@ -32,6 +33,8 @@
   <property name="test.framework" value="none" overwrite="false" />
   <!-- source_control_type: svn, vss, tfs, vault, git, hg -->
   <property name="source_control_type" value="git" overwrite="false" />
+  <!-- cover.framework: none, ncover, opencover -->
+  <property name="cover.framework" value="none" overwrite="false" />
   
   <!-- Environment specific variables -->
   <property name="path.separator" value="${string::trim(path::combine(' ', ' '))}" />
@@ -69,7 +72,8 @@
   <!-- These are run two folders down from the top level folder, so figure out the relative path from there and add "..\..\" -->
   <!-- In example, if from the top level directory, you have an item that is in lib\NCover\NCover.Console.exe you should add it here as ..\..\lib\NCover\NCover.Console.exe  -->
   <!-- To not use the tool, change to a location that doesn't exist -->
-  <property name="app.nunit.console" value="..${path.separator}..${path.separator}${folder.references}${path.separator}NUnit${path.separator}nunit-console.exe" overwrite="false" />
+  <property name="app.nunit.console" value="..${path.separator}..${path.separator}${folder.references}${path.separator}NUnit${path.separator}nunit-console.exe" overwrite="false" if="${platform::is-windows()}" />
+  <property name="app.nunit.console" value="nunit-console" overwrite="false" if="${platform::is-unix()}"/>
   <property name="app.xunit.console" value="..${path.separator}..${path.separator}${folder.references}${path.separator}xUnit${path.separator}xunit.console.clr4.exe" overwrite="false" />
   <property name="app.storevil.console" value="..${path.separator}..${path.separator}${folder.references}${path.separator}StorEvil${path.separator}StorEvil.exe" overwrite="false" />
   <property name="app.ncover" value="..${path.separator}..${path.separator}${folder.references}${path.separator}NCover${path.separator}NCover.Console.exe" overwrite="false" />
@@ -77,14 +81,21 @@
   <property name="app.ncover.tester" value="..${path.separator}..${path.separator}${folder.references}${path.separator}MbUnit2${path.separator}MbUnit.Cons.exe" overwrite="false" if="${test.framework=='mbunit2'}" />
   <property name="app.ncover.tester" value="${app.nunit.console}" overwrite="false" if="${test.framework=='nunit'}" />
   <property name="app.ncover.tester" value="${app.xunit.console}" overwrite="false" if="${test.framework=='xunit'}" />
-  <property name="app.ncover.tester" value="C:\Program Files (x86)\Gallio\bin\Gallio.Host.exe" overwrite="false" if="${test.framework=='gallio'}" />
-  <property name="app.ndepend" value="C:\Program Files\NDepend\NDepend.Console.exe" overwrite="false" />
-  <property name="app.moma" value="..\..\${folder.references}\MoMA\MoMA.exe" overwrite="false" />
-  <property name="app.nitriq" value="C:\Program Files (x86)\NimblePros\Nitriq Console + Pro\Nitriq.Console.exe" overwrite="false" />
-  <property name="app.xbuild" value="C:\Program Files (x86)\Mono-2.8\bin\xbuild.bat" overwrite="false" />
+  <property name="app.ncover.tester" value="${path::get-full-path(folder.program_files)}${path.separator}Gallio${path.separator}bin${path.separator}Gallio.Host.exe" overwrite="false" if="${test.framework=='gallio'}" />
+  <property name="app.opencover" value="..${path.separator}..${path.separator}${folder.references}${path.separator}OpenCover${path.separator}OpenCover.Console.exe" overwrite="false" />
+  <property name="app.opencover.tester" value="${app.nunit.console}" overwrite="false" if="${test.framework=='nunit'}" />
+  <property name="app.opencover.tester" value="${app.xunit.console}" overwrite="false" if="${test.framework=='xunit'}" />
+  <property name="app.opencover.tester" value="${path::get-full-path(folder.program_files)}${path.separator}Gallio${path.separator}bin${path.separator}Gallio.Host.exe" overwrite="false" if="${test.framework=='gallio'}" />
+  <property name="app.ndepend" value="${path::get-full-path(folder.program_files)}${path.separator}NDepend${path.separator}NDepend.Console.exe" overwrite="false" />
+  <property name="app.metric" value="${path::get-full-path(folder.program_files)}${path.separator}Microsoft Visual Studio 10.0${path.separator}Team Tools${path.separator}Static Analysis Tools${path.separator}FxCop${path.separator}Metrics.exe" overwrite="false" />
+  <property name="app.moma" value="..${path.separator}..${path.separator}${folder.references}${path.separator}MoMA${path.separator}MoMA.exe" overwrite="false" />
+  <property name="app.nitriq" value="Nitriq.Console.exe" overwrite="false" />
+  <property name="app.xbuild" value="${path::get-full-path(folder.program_files)}${path.separator}Mono-2.8${path.separator}bin${path.separator}xbuild.bat" overwrite="false" />
   <property name="app.eazfuscator" value="..${path.separator}${folder.references}${path.separator}Eazfuscator.NET${path.separator}Eazfuscator.NET.exe" overwrite="false" />
   <property name="app.nuget" value="..${path.separator}${folder.references}${path.separator}NuGet${path.separator}NuGet.exe" overwrite="false" />
+  <property name="app.ruby" value="C:${path.separator}Ruby${path.separator}bin${path.separator}ruby.exe" overwrite="false" />
+  <property name="app.powershell" value="%WINDIR%${path.separator}System32${path.separator}WindowsPowerShell${path.separator}v1.0${path.separator}powershell.exe" overwrite="false" />  
 
-  <property name="allow.powershell.unrestricted" value="false" overwrite="false" />
   <property name="run.ilmerge" value="false" overwrite="false" />
+
 </project>
