updating the example

--- a/warmup/App.config
+++ b/warmup/App.config
@@ -31,7 +31,7 @@
     </ignoredExtensions>
 
     <textReplaces>
-      <add find="__COMPANY_NAME__" replace="XXX inc." />
+      <add find="__YO__" replace="Dude, that was so sweet!" />
     </textReplaces>
   </warmup>
 
