--- a/settings/UppercuT.config
+++ b/settings/UppercuT.config
@@ -7,7 +7,7 @@
   <property name="project.name" value="warmup" overwrite="false" />
   <property name="path_to_solution" value="." overwrite="false" />
   <property name="repository.path" value="git://github.com/chucknorris/warmup.git" overwrite="false" />
-  <property name="company.name" value="A Curious Mind Software" overwrite="false" />
+  <property name="company.name" value="A Curious Mind Software &amp; Fervent Coder Software" overwrite="false" />
 
   <!-- folders -->
   <property name="folder.database" value="${project.name}.Database" overwrite="false" />
