--- a/warmup/warmup.csproj
+++ b/warmup/warmup.csproj
@@ -35,6 +35,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Ionic.Zip">
+      <HintPath>..\Ionic.Zip.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
@@ -49,6 +52,7 @@
     <Compile Include="commands\ICommand.cs" />
     <Compile Include="Folder.cs" />
     <Compile Include="Git.cs" />
+    <Compile Include="GitHub.cs" />
     <Compile Include="GitTemplateExtractor.cs" />
     <Compile Include="IExporter.cs" />
     <Compile Include="infrastructure\CommandAttribute.cs" />
