Adding ignored folders for folders and github. Restructuring code

--- a/warmup/App.config
+++ b/warmup/App.config
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <configuration>
   <configSections>
-    <section name="warmup" type="warmup.settings.WarmupConfiguration, warmup"/>
+    <section name="warmup" type="warmup.infrastructure.settings.WarmupConfiguration, warmup"/>
   </configSections>
 
   <!-- 
@@ -29,6 +29,10 @@
       <add ext="zip"/>
       <add ext="7z"/>
     </ignoredExtensions>
+    <ignoredFolders>
+      <add folder=".svn" />
+      <add folder=".git" />
+    </ignoredFolders>
 
     <textReplaces>
       <add find="__YO__" replace="Dude, that was so sweet!" />
