--- a/warmup/warmup.csproj
+++ b/warmup/warmup.csproj
@@ -50,21 +50,23 @@
     <Compile Include="commands\AddTextReplacement.cs" />
     <Compile Include="commands\GenerateWarmup.cs" />
     <Compile Include="commands\ICommand.cs" />
-    <Compile Include="Folder.cs" />
-    <Compile Include="Git.cs" />
-    <Compile Include="GitHub.cs" />
-    <Compile Include="GitTemplateExtractor.cs" />
-    <Compile Include="IExporter.cs" />
+    <Compile Include="infrastructure\exporters\BaseExporter.cs" />
+    <Compile Include="infrastructure\exporters\Folder.cs" />
+    <Compile Include="infrastructure\exporters\Git.cs" />
+    <Compile Include="infrastructure\exporters\GitHub.cs" />
+    <Compile Include="infrastructure\extractors\GitTemplateExtractor.cs" />
+    <Compile Include="infrastructure\exporters\IExporter.cs" />
     <Compile Include="infrastructure\CommandAttribute.cs" />
     <Compile Include="infrastructure\CommonHelp.cs" />
     <Compile Include="infrastructure\console\CommandRunner.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="settings\IgnoredFileTypeCollection.cs" />
-    <Compile Include="settings\TextReplaceCollection.cs" />
-    <Compile Include="settings\WarmupConfiguration.cs" />
+    <Compile Include="infrastructure\settings\IgnoredFileTypeCollection.cs" />
+    <Compile Include="infrastructure\settings\IgnoredFolderCollection.cs" />
+    <Compile Include="infrastructure\settings\TextReplaceCollection.cs" />
+    <Compile Include="infrastructure\settings\WarmupConfiguration.cs" />
     <Compile Include="SourceControlType.cs" />
-    <Compile Include="Svn.cs" />
+    <Compile Include="infrastructure\exporters\Svn.cs" />
     <Compile Include="TargetDir.cs" />
   </ItemGroup>
   <ItemGroup>
