--- a/warmup/App.config
+++ b/warmup/App.config
@@ -39,4 +39,5 @@
     </textReplaces>
   </warmup>
 
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
 <startup><supportedRuntime version="v2.0.50727"/></startup></configuration>
