added nspec via nuget and test project, added BomTestFiles to test project

--- a/lib/repositories.config
+++ b/lib/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\warmup\packages.config" />
+  <repository path="..\warmup.Tests\packages.config" />
 </repositories>
