added test suite for file encoding and token replacement, nspec.bat added to demonstrate how to run tests via command line (run build.bat first, then run nspec.bat), added light weight watchr script for continuous testing)

--- a/warmup.Tests/warmup.Tests.csproj
+++ b/warmup.Tests/warmup.Tests.csproj
@@ -48,9 +48,19 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="BomTestFiles\dev.yml" />
-    <None Include="BomTestFiles\DynamicBlog.slnfile" />
+    <None Include="BomTestFiles\dev.yml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="BomTestFiles\DynamicBlog.slnfile">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\warmup\warmup.csproj">
+      <Project>{79F65C3D-E235-4179-8761-CBC80F14FABB}</Project>
+      <Name>warmup</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
